<resources>
    <string name="app_name">SwiftSell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="pos">POS</string>
    <string name="home">Home</string>
    <string name="products">PRODUCTS</string>
    <string name="food">Food</string>
    <string name="add_new_product">Add New Product</string>
    <string name="back_to_category">Back to Category</string>
    <string name="food_icon">Food icon</string>
    <string name="click_to_scan_product">Click to Scan Product</string>
    <string name="supplies">Supplies</string>
    <string name="product">Product</string>
    <string name="press_to_upload_image">Press to Upload Image</string>
    <string name="back_to_home_fragment">Back to Home Fragment</string>
    <string name="select_category">Select Category</string>
    <string name="upload_image">Upload Image</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="cost">Cost</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="brandname">BrandName</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="date">Date</string>
    <string name="select_expiration_date">Select Expiration Date</string>
    <string name="press_to_navigate_in_product_form">Press to Navigate in Product Form</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="product_images_to_be_viewed">Product Images to be viewed</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="inventory_report">Inventory Report</string>
    <string name="_1_500">1,500</string>
    <string name="available_stocks">Available Stocks</string>
    <string name="product_in">Product In</string>
    <string name="product_out">Product Out</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="customer_no_1">Customer No. 1</string>
    <string name="customer_no_2">Customer No. 2</string>
    <string name="_4_000">4,000</string>
    <string name="_2_500">2,500</string>
    <string name="press_to_go_back_from_previous_activity">Press to go back from previous activity</string>
    <string name="press_to_edit_product_information">Press to edit product information</string>
    <string name="_100_00">100.00</string>
    <string name="image_of_product">Image of Product</string>
    <string name="_0_00">₱0.00</string>
    <string name="product_expiry">Product Expiry</string>
    <string name="_06_10_2023">06/10/2023</string>
    <string name="_00000000000000">00000000000000</string>
    <string name="upload">Upload</string>
    <string name="default_notification_channel_id">Default Notification Channel ID</string>
    <string name="category">Category</string>
    <string name="flashlight">Flashlight</string>
    <string name="image">image</string>
    <string name="total_products">Total Products</string>
    <string name="stocks_in_hand">Stocks In Hand</string>
    <string name="icon_of_food">Icon of Food</string>
    <string name="to_open">To Open</string>
    <string name="beverage">Beverage</string>
    <string name="clothing">Clothing</string>
    <string name="supplies_icon">Supplies Icon</string>
    <string name="clothing_icon">Clothing Icon</string>
    <string name="beverage_icon">Beverage Icon</string>
    <string name="scan_products">Scan Products</string>
    <string name="expiration">Expiration</string>
    <string name="back_to_previous_activity">Back to Previous Activity</string>
    <string name="edit_information">Edit Information</string>
    <string name="product_image">Product Image</string>
    <string name="cancel">Cancel</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="decrement_quantity">Decrement Quantity</string>
    <string name="increment_quantity">Increment Quantity</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="change">Change</string>
    <string name="account">Account</string>
    <string name="calculate">Calculate</string>
    <string name="find">Find</string>
    <string name="suggest_a_category">Suggest a category</string>
    <string name="remove">REMOVE</string>
    <string name="dl">DL</string>
    <string name="download">Download</string>
    <string name="change_username_and_password">Change username and password</string>
    <string name="transaction">Transaction</string>
    <string name="_0">0</string>

    <style name="select_again">Select Again</style>
</resources>