<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue"
        tools:context=".AddProductActivity"
        android:padding="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:contentDescription="@string/back_to_home_fragment"
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_new_product"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textColor="@color/light_yellow"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:backgroundTint="@color/light_yellow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:popupBackground="@color/blue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_expiration_date"
            android:textColor="@color/light_yellow"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="150dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/light_yellow"
                android:hint="@string/date"
                android:backgroundTint="@color/light_yellow"
                android:layout_alignParentStart="true"
                android:layout_height="48dp"/>



            <Button
                android:id="@+id/date_button"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/light_yellow"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/pick_a_date" />

        </RelativeLayout>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">


            <ImageView
                android:contentDescription="@string/press_to_upload_image"
                android:focusable="true"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@color/light_yellow"
                android:textColor="@color/light_yellow"
                android:src="@drawable/image_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/upload_image"
                android:onClick="uploadImage"
                android:textColor="@color/light_yellow"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:focusable="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/product_name"
            android:autofillHints="name"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/light_yellow"
            android:backgroundTint="@color/light_yellow"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/light_yellow"
            android:backgroundTint="@color/light_yellow"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/cost"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/light_yellow"
            android:backgroundTint="@color/light_yellow"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/light_yellow"
            android:backgroundTint="@color/light_yellow"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxWidth="300dp"
            android:hint="@string/barcode"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/light_yellow"
            android:backgroundTint="@color/light_yellow"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">

            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/scan"
                android:backgroundTint="@color/light_yellow"
                android:textColor="@color/blue"
                />


            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/generate"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_yellow"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                />

        </RelativeLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/light_yellow"
            android:textColor="@color/blue"
            android:onClick="insertData"
            android:layout_marginTop="30dp"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>
