<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_yellow"
    tools:context=".AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="horizontal"
            android:background="@color/blue"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:src="@drawable/back"
                android:contentDescription="@string/press_to_go_back_from_previous_activity"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_width="48dp"
                android:layout_centerVertical="true"
                android:layout_height="48dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/account"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:src="@drawable/edit"
                android:background="@android:color/transparent"
                android:contentDescription="@string/change_username_and_password"
                android:layout_width="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_height="48dp"/>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:textColorHint="@color/blue"
            android:backgroundTint="@color/blue"
            android:layout_height="48dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            android:textColorHint="@color/blue"
            android:backgroundTint="@color/blue"
            android:hint="@string/password"
            android:layout_height="48dp"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="400dp"
            android:backgroundTint="@color/blue"
            android:text="Logout"
            android:layout_height="48dp"/>






    </LinearLayout>






</FrameLayout>