<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandname"
            android:textColor="@color/yellow"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="595dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/light_yellow"
        app:cardCornerRadius="40dp"
        app:cardPreventCornerOverlap="true">


        <!-- CardView contents -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/user_svgrepo_com"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>
            <EditText
                android:id="@+id/repassword"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/recheck"
                android:drawablePadding="15dp"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>


            <Button
                android:id="@+id/signup"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:text="@string/sign_up"
                android:textColor="@color/light_yellow" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>